--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="ever">
         <div id="corpo">
             <section id="foto">
-            <img src="foto.png" alt="Foto Kaio Kague" title="Kaio Kague">
+            <img src="foto.jpeg" alt="Foto Kaio Kague" title="Kaio Kague">
             <h2>Kaio Kague</h2>
             </section>
             <section id="texto">
